--- a/static/styles.css
+++ b/static/styles.css
@@ -1,25 +1,84 @@
+html, body {
+    height: 95.4%;
+    margin: 0;
+}
 body {
-    font-family: Arial, sans-serif;
     margin: 0px;
     background-color: #faefd2;
-}
-h1 {
-    color: #998577;
-    margin: 20px;
-}
-form {
-    margin: 20px;
 }
 #navigation-container {
     width: 1200px;
     margin: 0 auto;
     height: 70px;
-  }
+}
+.caveat-font {
+  font-family: "Caveat", cursive;
+  font-size: 20px;
+  font-weight: 700;
+  font-style: normal;
+}
   
-  .navigation-bar {
-    box-shadow: 0px .5px 15px rgba(0, 0, 0, 0.5);
-    background-color: #d2b48c;
+.navigation-bar {
+    /* box-shadow: 0px .5px 15px rgba(0, 0, 0, 0.5); */
+    background-color: #faefd2;
     height: 70px;
     width: 100%;
     text-align:center;
-  }
+}
+.text {
+    background-color: aqua;
+    height: 300px;
+    text-align: center;
+    margin: auto;
+    width: 30%;
+    padding: 10px;
+}
+.container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #faefd2;
+    margin: 0;
+}
+.column1 {
+    flex: 1;
+    margin: 10px;
+    background-color: #faefd2;
+    padding: 20px;
+    border-radius: 5px;
+}
+.columnMid {
+    flex: 1;
+    margin: 10px;
+    background-color: #faefd2;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+.column3 {
+    flex: 1;
+    margin: 10px;
+    background-color: #faefd2;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+.img1_style {
+    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.8);  
+    margin-top: 35px;
+    margin-left: 50px; 
+}
+.img2_style {
+    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.8);  
+    margin-left: 10px;
+}
+.img3_style {
+    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.8);  
+    margin-top: 60px;
+}
+.img4_style {
+    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.8);  
+    margin-top: 20px;
+}
+
+
